--- a/.gitignore
+++ b/.gitignore
@@ -260,4 +260,5 @@ poetry.toml
 # LSP config files
 pyrightconfig.json
 
+openaikey.py
 # End of https://www.toptal.com/developers/gitignore/api/intellij+iml,python
